--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/svg+xml" href="/logo-svg.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="Nxdn895Q41Da8NpPdO-zcA9ly-9fugoxrjrqenPCE9w" />
   <title>Bhumi Panenjoan</title>
 </head>
 
