add analiythic script

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/svg+xml" href="/logo-svg.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GB0VHSPW20"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-GB0VHSPW20');
+  </script>
   <meta name="google-site-verification" content="Nxdn895Q41Da8NpPdO-zcA9ly-9fugoxrjrqenPCE9w" />
   <title>Bhumi Panenjoan</title>
 </head>
